# PAO2024

./: CMakeLists.txt  PAO2024.lnk  Pao2024lo.drawio  Sensori.files  Sensori.includes  UI_diagram.dia  sensori.cpp  sensori.dia  sensori.dia.autosave  sensori.dia~
PaO/: PaO.pro  assets.qrc  sensori_test.json
PaO/src/: mainwindow.cpp  mainwindow.h
PaO/src/Model/: Sensore.cpp  (+13 more)
build-PaO-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.PaO.Debug  object_script.PaO.Release
build-PaO-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_editsensordialog.cpp  moc_mainwindow.cpp  moc_optionsWidget.cpp  moc_sensorinfowidget.cpp  moc_sensorlistwidget.cpp  moc_toolBar.cpp  moc_widgetfotocellula.cpp  moc_widgetgrafico.cpp  moc_widgettemperatura.cpp  moc_widgettempercepita.cpp  moc_widgetumidita.cpp  moc_widgetvento.cpp
hello-world/: main.cpp
progetto_sensori/: CMakeLists.txt
progetto_sensori/src/: main.cpp
progetto_sensori/src/Controller/: fotocellula.cpp  sensore.cpp  sensore.h  temperatura.cpp  umidita.cpp
progetto_sensori/src/View/: comandi.cpp  infoPannello.cpp  infoSensore.cpp  mapButton.cpp  orario.cpp
src/: CMakeLists.txt  main.cpp
src/Controller/: sensore.cpp
src/Model/: fotocellula.cpp  fotocellula.h  jsonUtility.cpp  sensore.cpp  sensore.h  temperatura.cpp  temperatura.h  tempercepita.cpp  tempercepita.h  umidita.cpp  umidita.h  vento.cpp  vento.h
src/View/: dettPannello.cpp  infoSensore.h
temp/: CMakeLists.txt  Pao2024lo.drawio
ultima versione/: PaO
ultima versione/src/: mainwindow.cpp
(+43 files in other folders)
